# mujoco-daros

./: CMakeLists.txt  CTestTestfile.cmake  Configuration.h  ccd-targets.cmake  compile_commands.json
DARoS-Ctrl/: .gitignore  CMakeLists.txt  Makefile  MujocoSimulationBridge.hpp  System.hpp  cmake_install.cmake  main.cpp
DARoS-Ctrl/3rd-parties/: CMakeLists.txt  Makefile  cmake_install.cmake
DARoS-Ctrl/3rd-parties/casadi/: CMakeLists.txt
DARoS-Ctrl/3rd-parties/casadi/external_packages/: CMakeLists.txt
DARoS-Ctrl/3rd-parties/libtorch/: .gitignore  README.md
DARoS-Ctrl/3rd-parties/lord_imu/: CMakeLists.txt  LordImu.cpp  LordImu.h
DARoS-Ctrl/3rd-parties/lord_imu/test/: lord_test.cpp
DARoS-Ctrl/3rd-parties/osqp/: CMakeLists.txt
DARoS-Ctrl/3rd-parties/osqp/src/: interrupt_unix.c  timing_linux.c
DARoS-Ctrl/3rd-parties/qpOASES/: Makefile  cmake_install.cmake
DARoS-Ctrl/3rd-parties/qpSWIFT/: CMakeLists.txt  makefile
DARoS-Ctrl/3rd-parties/qpSWIFT/include/: GlobalOptions.h  Prime.h  amd.h  amd_internal.h
DARoS-Ctrl/3rd-parties/qpSWIFT/src/: Auxilary.c  Prime.c  RUNQP  RUNQP.c  cplus  cplus.cpp  ldl.c  timer.c
DARoS-Ctrl/3rd-parties/rbdl/: CMakeLists.txt  rbdl_eigenmath.h  rbdl_wrapper.cc  rbdl_wrapper.h  urdfreader.cc
DARoS-Ctrl/3rd-parties/urdf/: CMakeLists.txt  Makefile  cmake_install.cmake  joint.cpp  joint.h  model.cpp  pose.h
DARoS-Ctrl/3rd-parties/vectornav/: CMakeLists.txt  Makefile  change_text.sh  cmake_install.cmake
DARoS-Ctrl/Commons/WBC/: CMakeLists.txt
DARoS-Ctrl/Commons/WBC/ContactSet/: SingleContact.hpp
DARoS-Ctrl/FBSimulation/DynSimulator/: CMakeLists.txt  DARoS_Simulation.cpp  DARoS_Simulation.hpp  DynamicsEngine.cpp  DynamicsEngine.h
DARoS-Ctrl/PrestoeSystem/: CMakeLists.txt  PrestoeDefinition.h  PrestoeMJSimulationBridge.cpp  PrestoeMJSimulationBridge.hpp  PrestoeSystem.cpp  PrestoeSystem.hpp  main.cpp
DARoS-Ctrl/PrestoeSystem/Configs/: jpos_state.yaml  prestoe_box-pickup.yaml  prestoe_standing.yaml  system_setup.yaml
DARoS-Ctrl/PrestoeSystem/CtrlState/: JPosCtrlState.cpp  JPosCtrlState.hpp  State.hpp  StateMachineCtrl.cpp  StateMachineCtrl.hpp
DARoS-Ctrl/PrestoeSystem/Observer/: PrestoeObsManager.hpp
DARoS-Ctrl/QPGenerator/: casadi_to_jax.py  casadi_to_pytorch.py  environment.yml  generate.py  jaxadi_test.py  test_jax.py  test_pytorch.py  utils.py
DARoS-Ctrl/QPGenerator/configs/: staccatoe.yaml  staccatoe_hopping_offline.yaml  staccatoe_standing_offline.yaml
DARoS-Ctrl/Robots/Prestoe/: prestoe.xml
DARoS-Ctrl/Robots/Staccatoe/: staccatoe.xml
DARoS-Ctrl/SimEnv_Prestoe/: PrestoeMJSimulationBridge.cpp  PrestoeMJSimulationBridge.hpp
DARoS-Ctrl/SimEnv_Staccatoe/: StaccatoeMJSimulationBridge.cpp
DARoS-Ctrl/StaccatoeSystem/: StaccatoeMJSimulationBridge.hpp
DARoS-Ctrl/Systems/: CMakeLists.txt  Command.hpp  HardwareBridge.hpp  Makefile  MujocoSimulationBridge.hpp  ObserverManager.hpp  System.hpp  array_safety_daros.h  cmake_install.cmake
DARoS-Ctrl/Systems/CartPoleSystem/: CMakeLists.txt  CartPoleDynamics.cpp  Makefile  cmake_install.cmake
DARoS-Ctrl/Systems/CtrlUtils/: CMakeLists.txt  Makefile  cmake_install.cmake  filters.cpp
DARoS-Ctrl/Systems/DigitSystem/: main.cpp
DARoS-Ctrl/Systems/MITHumanoidSystem/: CMakeLists.txt  TelloLCMCommunicator.cpp  TelloLCMCommunicator.hpp  TelloParameters.h  TelloSimulationBridge.cpp  TelloSimulationBridge.hpp  TelloSystem.cpp  TelloSystem.hpp  main.cpp  tello_MPC_info_lcmt.py  vis.py
DARoS-Ctrl/Systems/MiniArmSystem/: CMakeLists.txt  Makefile  MiniArmMJSimulationBridge.cpp  MiniArmMJSimulationBridge.hpp  MiniArmSystem.cpp  MiniArmSystem.hpp  cmake_install.cmake  main.cpp
DARoS-Ctrl/Systems/PatSystem/: CMakeLists.txt  PatHardwareBridge.cpp  PatHardwareBridge.hpp  PatHardwareTestBridge.cpp  PatHardwareTestBridge.hpp  PatLCMCommunicator.cpp  PatLCMCommunicator.hpp  PatMocapManager.cpp  PatMocapManager.hpp  PatParameters.h  PatSimulationBridge.cpp  PatSimulationBridge.hpp  PatSystem.cpp  PatSystem.hpp  change_text.sh  main.cpp
DARoS-Ctrl/Systems/PlanarBipedSystem/: CMakeLists.txt  main.cpp
DARoS-Ctrl/Systems/PrestoeBipedSystem/: CMakeLists.txt  Makefile  PrestoeBipedMJSimulationBridge.cpp  PrestoeBipedMJSimulationBridge.hpp  PrestoeBipedSystem.cpp  PrestoeBipedSystem.hpp  cmake_install.cmake  main.cpp
DARoS-Ctrl/Systems/PrestoeSystem/: CMakeLists.txt  Makefile  PrestoeMJSimulationBridge.cpp  PrestoeMJSimulationBridge.hpp  PrestoeSystem.cpp  PrestoeSystem.hpp  cmake_install.cmake  main.cpp
DARoS-Ctrl/Tests/: pytorch_test.py
DARoS-Ctrl/Utils/: CMakeLists.txt  CalculateRollPitchYaw.h  Makefile  MathUtilities.h  PeriodicTask.cpp  PeriodicTask.h  SegfaultHandler.cpp  SpatialInertia.h  cmake_install.cmake  cppTypes.h  filters.cpp  orientation_tools.h  pseudoInverse.h  spatial.h  utilities.cpp  utilities.h
DARoS-Ctrl/Utils/ParamHandler/: CMakeLists.txt  Makefile  ParamHandler.hpp  cmake_install.cmake
DARoS-Ctrl/Utils/Scripts/: config_network_mac.sh  launch_lcm_spy.sh  log_convert.sh  make_LCM.sh  make_LCM_no_java.sh  make_System_LCM.sh  run_daros.sh  send_to_robot.sh  setup_network_mc.py
DARoS-Ctrl/Utils/python/: run_miniArm.py  run_prestoe.py  run_viewerMiniArm.py
DARoS-Ctrl/WBC/: ContactSpec.hpp  WBC.hpp
DARoS-Ctrl/WBC/ContactSet/: LineContactWrenchCone.cpp  LineContactWrenchCone.hpp  PitchContact.cpp  PitchContact.hpp  PitchYawContact.hpp  SingleContact.cpp
DARoS-Ctrl/WBC/TaskSet/: BodyOriTask.cpp  BodyOriTask2.cpp  BodyPostureTask.cpp  BodyRyRzTask.cpp  CentroidAngMomentumTask.cpp  CentroidAngMomentumTask2.hpp  CentroidLinearMomentumTask.cpp  CentroidLinearMomentumTask.hpp  CentroidMomentumTask.cpp  CentroidMomentumTask.hpp  CentroidMomentumTask2.hpp  JPosTask.cpp  LeftKneeAnkleJPosTask.cpp  LeftKneeJPosTask.cpp  LegLeftJPosTask.cpp  LegLeftJPosTask.hpp  LegRightJPosTask.cpp  LegRightJPosTask.hpp  MomentumTask.cpp  RightKneeAnkleJPosTask.hpp  RightKneeJPosTask.cpp
DARoS-Ctrl/WBC/WBIC/: WBIC.cpp  WBIC_test.cpp  WBIC_test.hpp
DARoS-Ctrl/WBC/WBRC/: WBRC.cpp
DARoS-Ctrl/python/: run_prestoe.py  run_staccatoe.py  run_viewerMiniArm.py
(+729 files in other folders)
