file(GLOB_RECURSE sources "*.cpp")
add_library(patroclus-observers SHARED ${sources})
target_link_libraries(patroclus-observers rs-estimators rs-utils patroclus-robots)
if(MOCAP_BUILD)
  target_link_libraries(patroclus-observers owlsock)
endif()
if(REALSENSE_ENABLE)
  target_link_libraries(patroclus-observers ${realsense2_LIBRARY})
endif(REALSENSE_ENABLE)
